--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,37 +1,22 @@
 name: chattopic
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 0.0.0+1
 
 environment:
   sdk: ">=2.17.5 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Localization
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
+  intl_utils: ^2.6.1
+  # Icons
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -39,17 +24,21 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - assets/font/
 
   fonts:
-    - family: Nintendo DS BIOS
+    - family: NDS12
       fonts:
-        - asset: assets/font/ds_font.ttf
+        - asset: assets/font/NDS12.ttf
           weight: 400
+
+flutter_intl:
+  enabled: true
+  main_locale: en
+  arb_dir: assets/l10n
+  ouput_dir: lib/generated
