chore: Setup different flavours for android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,6 +60,17 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            applicationIdSuffix ".dev"
+            dimension "default"
+        }
+        prod {
+            dimension "default"
+        }
+    }
 }
 
 flutter {
