--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,29 +1,110 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
-linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at
-  # https://dart-lang.github.io/linter/lints/index.html.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
-  rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+analyzer:
+  plugins:
+    - dart_code_metrics
+  exclude:
+    - lib/generated/**
+    - plugins/**
+  errors:
+    missing_required_param: warning
+    parameter_assignments: warning
+    missing_return: error
+    todo: ignore
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+dart_code_metrics:
+  metrics:
+    - cyclomatic-complexity: 20
+    - halstead-volume: 150
+    - lines-of-code: 100
+    - maintainability-index: 50
+    - maximum-nesting-level: 5
+    - number-of-methods: 10
+    - number-of-parameters: 6
+    - source-lines-of-code: 50
+    - technical-debt:
+        threshold: 1
+        todo-cost: 161
+        ignore-cost: 320
+        ignore-for-file-cost: 396
+        as-dynamic-cost: 322
+        deprecated-annotations-cost: 37
+        file-nullsafety-migration-cost: 41
+        unit-type: "USD"
+    - weight-of-class: 0.33
+  rules:
+    # Common
+    - avoid-collection-methods-with-unrelated-types
+    - avoid-dynamic:
+        exclude:
+          - test/**
+    - avoid-global-state
+    - avoid-late-keyword:
+        exclude:
+          - test/**
+          - lib/main.dart
+    - avoid-missing-enum-constant-in-map
+    - avoid-nested-conditional-expressions:
+        acceptance-level: 2
+    - avoid-non-null-assertion
+    - avoid-unnecessary-type-assertions
+    - avoid-unnecessary-type-casts
+    - avoid-unrelated-type-assertions
+    - avoid-unused-parameters
+    - binary-expression-operand-order
+    - double-literal-format
+    - format-comment
+    - member-ordering:
+      alphabetize: true
+      order:
+        - public-fields
+        - private-fields
+        - constructors
+    - newline-before-return
+    - no-boolean-literal-compare
+    - no-empty-block
+    - no-equal-arguments:
+        ignored-parameters:
+          - height
+          - width
+    - no-equal-then-else
+    - no-magic-number
+    - no-object-declaration
+    - prefer-async-await
+    - prefer-commenting-analyzer-ignores
+    - prefer-conditional-expressions
+    - prefer-correct-identifier-length:
+        exceptions:
+          - id
+          - ok
+    - prefer-correct-type-name:
+        max-length: 44
+    - prefer-first
+    - prefer-last
+    - prefer-immediate-return
+    - prefer-match-file-name:
+        exclude:
+          - test/**
+    - prefer-moving-to-variable:
+        exclude:
+          - test/**
+    - prefer-trailing-comma
+    # Flutter specific
+    - always-remove-listener
+    - avoid-border-all
+    - avoid-returning-widgets
+    - avoid-unnecessary-setstate
+    - avoid-wrapping-in-padding
+    - prefer-const-border-radius
+    - prefer-extracting-callbacks
+    - prefer-single-widget-per-file:
+        ignore-private-widgets: true
+
+  anti-patterns:
+    - long-method
+    - long-parameter-list
+
+  metrics-exclude:
+    - test/**
+  rules-exclude:
+    - test/**
