feat: Add color container

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   intl_utils: ^2.6.1
   # Icons
   cupertino_icons: ^1.0.2
+  collection: ^1.16.0
+  dotted_border: ^2.0.0+2
 
 dev_dependencies:
   dart_code_metrics: ^4.14.0
