--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   # Icons
   cupertino_icons: ^1.0.2
   collection: ^1.16.0
+  shared_preferences: ^2.0.15
+  bloc: ^8.0.3
 
 dev_dependencies:
   dart_code_metrics: ^4.14.0
