--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.0.0+1
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -14,8 +14,8 @@ dependencies:
   # Localization
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
-  intl_utils: ^2.6.1
+  intl: ^0.18.0
+  intl_utils: ^2.8.3
   # Icons
   cupertino_icons: ^1.0.2
   collection: ^1.16.0
