--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -64,7 +64,9 @@ dart_code_metrics:
     - no-boolean-literal-compare
     - no-empty-block
     - no-equal-then-else
-    - no-magic-number
+    - no-magic-number:
+        exclude:
+          - model/enum/**
     - no-object-declaration
     - prefer-async-await
     - prefer-commenting-analyzer-ignores
