--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.0.0+1
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -20,7 +20,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   collection: ^1.16.0
   shared_preferences: ^2.0.15
-  bloc: ^8.0.3
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   dart_code_metrics: ^4.14.0
