--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   collection: ^1.16.0
   shared_preferences: ^2.0.15
   flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   dart_code_metrics: ^4.14.0
