--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  mocktail: ^0.3.0
+  bloc_test: ^9.1.3
 
 dev_dependencies:
   dart_code_metrics: ^4.14.0
