--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,16 +18,19 @@ dependencies:
   intl_utils: ^2.8.3
   # Icons
   cupertino_icons: ^1.0.2
-  collection: ^1.16.0
+  # State Management
   shared_preferences: ^2.0.15
   flutter_bloc: ^8.1.3
+  # Code Utils
+  collection: ^1.16.0
   equatable: ^2.0.5
-  mocktail: ^0.3.0
-  bloc_test: ^9.1.3
 
 dev_dependencies:
   dart_code_metrics: ^4.14.0
   flutter_lints: ^2.0.1
+  # Testing
+  mocktail: ^0.3.0
+  bloc_test: ^9.1.3
   flutter_test:
     sdk: flutter
   test: any
